force-app/main/default/objects/AMFS_Dipcad_Setting__mdt/AMFS_Dipcad_Setting__mdt.object-meta.xml
<CustomObject>
    <label>AMFS Dipcad Setting</label>
    <pluralLabel>AMFS Dipcad Settings</pluralLabel>
</CustomObject>