force-app/main/default/objects/AMFS_Dipcad_Setting__mdt/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>Type (Receiver/CC)</description>
    <inlineHelpText>Type (Receiver/CC)</inlineHelpText>
    <label>Address Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>