force-app/main/default/objects/AMFS_Dipcad_Setting__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Dipcad</description>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>