force-app/main/default/objects/AMFS_Dipcad_Setting__mdt/fields/Size_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Size_Attachment__c</fullName>
    <description>Jumlah ukuran file attachment pada email</description>
    <inlineHelpText>Satuan MB</inlineHelpText>
    <label>Size Attachment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>